--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 
 <body>
 
+    <section class="presentation">
+        <div class="title">
+            <img src="/Images Booki\Booki@3x.jpg">
+        </div>
+
+        <div class="link_hebergement">
+            <p><a href="#hébergement">
+                    Hébergement
+                </a></p>
+        </div>
+
+
+    </section>
+
 </body>
 
 </html>
