--- a/index.html
+++ b/index.html
@@ -8,18 +8,40 @@
 </head>
 
 <body>
+    <header>
+        <section class="presentation">
+            <div class="title">
+                <img src="/Images Booki/logo/Booki@3x.png">
+            </div>
 
-    <section class="presentation">
-        <div class="title">
-            <img src="/Images Booki\Booki@3x.jpg">
+            <div class="link_hebergement_marseilles">
+                <p><a href="#hébergement_marseilles">
+                        Hébergement
+                    </a></p>
+            </div>
+
+            <div class="link_activités_marseilles">
+                <p><a href="#hactivités_marseilles">
+                        Activités
+                    </a></p>
+            </div>
+
+    </header>
+
+    <section class="Button_search">
+
+        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+
+        <h2>En plein centre-ville ou en pleine nature</h2>
+
+        <div id="button">
+
+
         </div>
 
-        <div class="link_hebergement">
-            <p><a href="#hébergement">
-                    Hébergement
-                </a></p>
-        </div>
 
+
+    </section>
 
     </section>
 
