--- a/index.html
+++ b/index.html
@@ -1,40 +1,44 @@
-<html lang="en">
+<html lang="fr">
 
 <head>
+    <title>Booki</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    </style>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-    </style>
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <section class="presentation">
+    <header class="presentation">
+        <div class="logo">
             <div class="title">
-                <!-- <img src="/Images Booki/logo/Booki.png">-->
+                <img src="/images_booki/logo/booki.png" alt="logo">
             </div>
+        </div>
 
+        <div class="liens">
             <div class="link_hebergement_marseilles">
+
                 <p><a href="#hébergement_marseilles">
                         Hébergements
                     </a></p>
+
             </div>
+
 
             <div class="link_activités_marseilles">
                 <p><a href="#hactivités_marseilles">
                         Activités
                     </a></p>
             </div>
+
+        </div>
 
     </header>
 
@@ -46,14 +50,14 @@
 
         <div class="button">
             <div class="icon_localisation">
-                <img src="/Images Booki/composants/Vector.png">
+                <img src="/images_booki/composants/vector.png" alt="pointeur">
             </div>
             <div class="search">
                 <input type="search" id="site-search" name="searching">
             </div>
 
             <div class="search_button">
-                <button type="submit"><i class="fa_search">Rechercher</i></button>
+                <button type="submit"><i class="searchs">Rechercher</i></button>
             </div>
         </div>
 
@@ -68,22 +72,22 @@
         </div>
 
         <div class="economique">
-            <img width="22px" height="16.26px" src="/Images Booki/composants/Vectoreconomique.png">
+            <img width="22px" height="16.26px" src="/images_booki/composants/vectoreconomique.png" alt="eco">
             <p> Economique </p>
         </div>
 
         <div class="familial">
-            <img width="13.44px" height="22px" src="/Images Booki/composants/Vectorfamilial.png">
+            <img width="13.44px" height="22px" src="/images_booki/composants/vectorfamilial.png" alt="familial">
             <p> Familial </p>
         </div>
 
         <div class="romantique">
-            <img width="22px" height="18.33px" src="/Images Booki/composants/Vectorromantique.png">
+            <img width="22px" height="18.33px" src="/images_booki/composants/vectorromantique.png" alt="romantique">
             <p> Romantique </p>
         </div>
 
         <div class="animaux_autorisés">
-            <img width="22px" height="22px" src="/Images Booki/composants/Vectoranimaux.png">
+            <img width="22px" height="22px" src="/images_booki/composants/vectoranimaux.png" alt="animaux">
             <p> Animaux autorisés </p>
         </div>
 
@@ -93,19 +97,320 @@
     <section class="information">
 
 
-        <img width="4px" height="10px" src="/Images Booki/composants/Vectori.png">
+        <img w idth="4px" height="10px" src="/images_booki/composants/vectori.png" alt="i">
 
         <p> Plus de 500 logements sont disponibles dans cette ville </p>
 
 
     </section>
 
-    <section class="rectangle_18">
+    <div class="hôtel_marseilles">
 
-        <h2> Hébergements à Marseilles </h2>
+        <section id="hébergement_marseilles">
 
+            <h2> Hébergements à Marseilles </h2>
+
+
+            <div class="six_rectangles">
+
+                <div class="canebière">
+                    <div class="photo">
+                        <img width="246px" height="124px" alt="photo_1"
+                            src="/images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+                    </div>
+                    <span class="titre">Auberge La Canebière</span>
+                    <p> Nuit à partir de 25€ </p>
+                    <div class="star">
+                        <img width="12px" alt="a-first" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="a-second" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="a-third" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="a-fourth" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="a-fifth" height="12px"
+                            src="/images_booki/composants/vectorwhitestar.png">
+
+                    </div>
+
+                </div>
+
+                <div class="canebière">
+                    <div class="photo">
+                        <img width="246px" height="124px" alt="photo_2"
+                            src="/images_booki/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
+                    </div>
+                    <span class="titre">Hôtel du port</span>
+                    <p> Nuit à partir de 52€ </p>
+                    <div class="star">
+                        <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-second" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-fourth" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-fifth" height="12px"
+                            src="/images_booki/composants/vectorwhitestar.png">
+
+                    </div>
+
+                </div>
+
+                <div class="canebière">
+                    <div class="photo">
+                        <img width="246px" height="124px" alt="photo_2"
+                            src="/images_booki/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                    </div>
+                    <span class="titre">Hôtel des mouettes</span>
+                    <p> Nuit à partir de 76€ </p>
+                    <div class="star">
+                        <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-second" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-fourth" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-fifth" height="12px"
+                            src="/images_booki/composants/vectorwhitestar.png">
+
+                    </div>
+
+                </div>
+
+                <div class="canebière">
+                    <div class="photo">
+                        <img width="246px" height="124px" alt="photo_2"
+                            src="/images_booki/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                    </div>
+                    <span class="titre">Hôtel de la mer</span>
+                    <p> Nuit à partir de 46€ </p>
+                    <div class="star">
+                        <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-second" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-fourth" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-fifth" height="12px"
+                            src="/images_booki/composants/vectorwhitestar.png">
+
+                    </div>
+
+                </div>
+
+                <div class="canebière">
+                    <div class="photo">
+                        <img width="246px" height="124px" alt="photo_2"
+                            src="/images_booki/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
+                    </div>
+                    <span class="titre">Auberge Le Panier</span>
+                    <p> Nuit à partir de 23€ </p>
+                    <div class="star">
+                        <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-second" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-fourth" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-fifth" height="12px"
+                            src="/images_booki/composants/vectorwhitestar.png">
+
+                    </div>
+
+                </div>
+
+                <div class="canebière">
+                    <div class="photo">
+                        <img width="246px" height="124px" alt="photo_2"
+                            src="/images_booki/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
+                    </div>
+                    <span class="titre">Hôtel chez Amina</span>
+                    <p> Nuit à partir de 96€ </p>
+                    <div class="star">
+                        <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-second" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-fourth" height="12px" src="/images_booki/composants/vectorstar.png">
+                        <img width="12px" alt="b-fifth" height="12px"
+                            src="/images_booki/composants/vectorwhitestar.png">
+
+                    </div>
+
+                </div>
+
+
+            </div>
+        </section>
+
+
+        <section id="populaires">
+
+            <h2> Les plus populaires </h2>
+
+            <div class="trois_rectangles">
+
+                <div class="matin">
+                    <div class="photo">
+                        <img width="137px" height="144px" alt="photo_1"
+                            src="/images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+                    </div>
+                    <div class="text">
+                        <span class="titre">Hôtel Le soleil du matin</span>
+                        <p> Nuit à partir de 128€ </p>
+                        <div class="star">
+                            <img width="12px" alt="a-first" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="a-second" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="a-third" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="a-fourth" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="a-fifth" height="12px"
+                                src="/images_booki/composants/vectorwhitestar.png">
+                        </div>
+                    </div>
+
+                </div>
+
+
+
+            </div>
+
+            <div class="trois_rectangles">
+
+                <div class="matin">
+                    <div class="photo">
+                        <img width="137px" height="144px" alt="photo_1"
+                            src="/images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+                    </div>
+                    <div class="text">
+                        <span class="titre">Hôtel Le soleil du matin</span>
+                        <p> Nuit à partir de 128€ </p>
+                        <div class="star">
+                            <img width="12px" alt="a-first" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="a-second" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="a-third" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="a-fourth" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="a-fifth" height="12px"
+                                src="/images_booki/composants/vectorwhitestar.png">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="trois_rectangles">
+
+                <div class="matin">
+                    <div class="photo">
+                        <img width="137px" height="144px" alt="photo_1"
+                            src="/images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+                    </div>
+                    <div class="text">
+                        <span class="titre">Hôtel Le soleil du matin</span>
+                        <p> Nuit à partir de 128€ </p>
+                        <div class="star">
+                            <img width="12px" alt="a-first" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="a-second" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="a-third" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="a-fourth" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="a-fifth" height="12px"
+                                src="/images_booki/composants/vectorwhitestar.png">
+                        </div>
+                    </div>
+
+                </div>
+
+
+            </div>
+
+    </div>
     </section>
 
+    </div>
+
+    <!-- PARTIE ACTIVITES A MARSEILLES -->
+
+    <div class="activité_title">
+        <h1>Activités à Marseilles</h1>
+    </div>
+
+    <section class="activités">
+
+        <div class="activity">
+
+
+            <div class="image">
+
+                <img width="302px" height="389px" alt="photo_1"
+                    src="/images_booki/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
+
+            </div>
+
+            <div class="lieux">
+                <p>
+                    Vieux-Port
+                </p>
+
+            </div>
+
+
+        </div>
+
+        <div class="activity">
+
+
+            <div class="image">
+
+                <img width="302px" height="389px" alt="photo_1"
+                    src="/images_booki/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
+
+            </div>
+
+            <div class="lieux">
+                <p>
+                    Fort de Pomègues
+                </p>
+
+            </div>
+
+
+        </div>
+
+        <div class="activity">
+
+
+            <div class="image">
+
+                <img width="302px" height="389px" alt="photo_1"
+                    src="/images_booki/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
+
+            </div>
+
+            <div class="lieux">
+                <p>
+                    Parc National des Calanques
+                </p>
+
+            </div>
+
+
+        </div>
+
+        <div class="activity">
+
+
+            <div class="image">
+
+                <img width="302px" height="389px" alt="photo_1"
+                    src="/images_booki/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg">
+
+            </div>
+
+            <div class="lieux">
+                <p>
+                    Notre-Dame-de-la-Garde
+                </p>
+
+            </div>
+
+
+        </div>
+
+
+    </section>
 
 </body>
 
