J'avance sur le responsive Header et Footer

--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
                 <img src="/images_booki/logo/booki.png" alt="logo">
             </div>
         </div>
+        <nav>
+            <div class="liens">
+                <div class="link_hebergement_marseilles">
 
-        <div class="liens">
-            <div class="link_hebergement_marseilles">
+                    <p><a href="#hébergement_marseilles">
+                            Hébergements
+                        </a></p>
 
-                <p><a href="#hébergement_marseilles">
-                        Hébergements
-                    </a></p>
+                </div>
+
+
+                <div class="link_activités_marseilles">
+                    <p><a href="#hactivités_marseilles">
+                            Activités
+                        </a></p>
+                </div>
 
             </div>
-
-
-            <div class="link_activités_marseilles">
-                <p><a href="#hactivités_marseilles">
-                        Activités
-                    </a></p>
-            </div>
-
-        </div>
-
+        </nav>
     </header>
 
     <section class="button_search">
@@ -109,124 +109,146 @@
         <section id="hébergement_marseilles">
 
             <h2> Hébergements à Marseilles </h2>
-
+            <div>test</div>
 
             <div class="six_rectangles">
+                <a href="#">
+                    <div class="canebière">
+                        <div class="photo">
+                            <img width="246px" height="124px" alt="photo_1"
+                                src="/images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+                        </div>
+                        <span class="titre">Auberge La Canebière</span>
+                        <p> Nuit à partir de 25€ </p>
+                        <div class="star">
+                            <img width="12px" alt="a-first" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="a-second" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="a-third" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="a-fourth" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="a-fifth" height="12px"
+                                src="/images_booki/composants/vectorwhitestar.png">
 
-                <div class="canebière">
-                    <div class="photo">
-                        <img width="246px" height="124px" alt="photo_1"
-                            src="/images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                    </div>
-                    <span class="titre">Auberge La Canebière</span>
-                    <p> Nuit à partir de 25€ </p>
-                    <div class="star">
-                        <img width="12px" alt="a-first" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="a-second" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="a-third" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="a-fourth" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="a-fifth" height="12px"
-                            src="/images_booki/composants/vectorwhitestar.png">
-
-                    </div>
-
-                </div>
-
-                <div class="canebière">
-                    <div class="photo">
-                        <img width="246px" height="124px" alt="photo_2"
-                            src="/images_booki/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
-                    </div>
-                    <span class="titre">Hôtel du port</span>
-                    <p> Nuit à partir de 52€ </p>
-                    <div class="star">
-                        <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-second" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-fourth" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-fifth" height="12px"
-                            src="/images_booki/composants/vectorwhitestar.png">
+                        </div>
 
                     </div>
+                </a>
 
-                </div>
+                <a href="#">
+                    <div class="canebière">
+                        <div class="photo">
+                            <img width="246px" height="124px" alt="photo_2"
+                                src="/images_booki/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
+                        </div>
+                        <span class="titre">Hôtel du port</span>
+                        <p> Nuit à partir de 52€ </p>
+                        <div class="star">
+                            <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-second" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-fourth" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-fifth" height="12px"
+                                src="/images_booki/composants/vectorwhitestar.png">
 
-                <div class="canebière">
-                    <div class="photo">
-                        <img width="246px" height="124px" alt="photo_2"
-                            src="/images_booki/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                        </div>
+
                     </div>
-                    <span class="titre">Hôtel des mouettes</span>
-                    <p> Nuit à partir de 76€ </p>
-                    <div class="star">
-                        <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-second" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-fourth" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-fifth" height="12px"
-                            src="/images_booki/composants/vectorwhitestar.png">
+                </a>
+                <a href="#">
 
-                    </div>
+                    <div class="canebière">
+                        <div class="photo">
+                            <img width="246px" height="124px" alt="photo_2"
+                                src="/images_booki/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                        </div>
+                        <span class="titre">Hôtel des mouettes</span>
+                        <p> Nuit à partir de 76€ </p>
+                        <div class="star">
+                            <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-second" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-fourth" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-fifth" height="12px"
+                                src="/images_booki/composants/vectorwhitestar.png">
 
-                </div>
-
-                <div class="canebière">
-                    <div class="photo">
-                        <img width="246px" height="124px" alt="photo_2"
-                            src="/images_booki/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
-                    </div>
-                    <span class="titre">Hôtel de la mer</span>
-                    <p> Nuit à partir de 46€ </p>
-                    <div class="star">
-                        <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-second" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-fourth" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-fifth" height="12px"
-                            src="/images_booki/composants/vectorwhitestar.png">
+                        </div>
 
                     </div>
 
-                </div>
+                    <a href="#">
+                    </a>
+                    <div class="canebière">
+                        <div class="photo">
+                            <img width="246px" height="124px" alt="photo_2"
+                                src="/images_booki/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                        </div>
+                        <span class="titre">Hôtel de la mer</span>
+                        <p> Nuit à partir de 46€ </p>
+                        <div class="star">
+                            <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-second" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-fourth" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-fifth" height="12px"
+                                src="/images_booki/composants/vectorwhitestar.png">
 
-                <div class="canebière">
-                    <div class="photo">
-                        <img width="246px" height="124px" alt="photo_2"
-                            src="/images_booki/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
-                    </div>
-                    <span class="titre">Auberge Le Panier</span>
-                    <p> Nuit à partir de 23€ </p>
-                    <div class="star">
-                        <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-second" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-fourth" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-fifth" height="12px"
-                            src="/images_booki/composants/vectorwhitestar.png">
-
-                    </div>
-
-                </div>
-
-                <div class="canebière">
-                    <div class="photo">
-                        <img width="246px" height="124px" alt="photo_2"
-                            src="/images_booki/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
-                    </div>
-                    <span class="titre">Hôtel chez Amina</span>
-                    <p> Nuit à partir de 96€ </p>
-                    <div class="star">
-                        <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-second" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-fourth" height="12px" src="/images_booki/composants/vectorstar.png">
-                        <img width="12px" alt="b-fifth" height="12px"
-                            src="/images_booki/composants/vectorwhitestar.png">
+                        </div>
 
                     </div>
+                </a>
 
-                </div>
+                <a href="#">
+                    <div class="canebière">
+                        <div class="photo">
+                            <img width="246px" height="124px" alt="photo_2"
+                                src="/images_booki/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
+                        </div>
+                        <span class="titre">Auberge Le Panier</span>
+                        <p> Nuit à partir de 23€ </p>
+                        <div class="star">
+                            <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-second" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-fourth" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-fifth" height="12px"
+                                src="/images_booki/composants/vectorwhitestar.png">
 
+                        </div>
+
+                    </div>
+                </a>
+
+                <a href="#">
+                    <div class="canebière">
+                        <div class="photo">
+                            <img width="246px" height="124px" alt="photo_2"
+                                src="/images_booki/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
+                        </div>
+                        <span class="titre">Hôtel chez Amina</span>
+                        <p> Nuit à partir de 96€ </p>
+                        <div class="star">
+                            <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-second" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-fourth" height="12px"
+                                src="/images_booki/composants/vectorstar.png">
+                            <img width="12px" alt="b-fifth" height="12px"
+                                src="/images_booki/composants/vectorwhitestar.png">
+
+                        </div>
+
+                    </div>
+                </a>
 
             </div>
         </section>
@@ -234,10 +256,12 @@
 
         <section id="populaires">
 
-            <h2> Les plus populaires </h2>
+
 
             <div class="trois_rectangles">
-
+                <!-- <div class="title22">
+                    <h2> Les plus populaires </h2><br>
+                </div> -->
                 <div class="matin">
                     <div class="photo">
                         <img width="137px" height="144px" alt="photo_1"
@@ -411,6 +435,42 @@
 
 
     </section>
+
+
+    <!-- FOOTER -->
+    <footer>
+
+        <div class="bandeau">
+
+            <div class="a_propos">
+                <h1>A propos</h1><br>
+
+                <p> <a href="#">Fonctionnement du site</a></p>
+                <p> <a href="#">Conditions générales</a></p>
+                <p> <a href="#">Données et confidentialité</a></p>
+
+            </div>
+
+            <div class="a_propos">
+                <h1>Nos hébergements</h1><br>
+
+                <p> <a href="#">Charte qualité</a></p>
+                <p> <a href="#">Proposer votre hôtel</a></p>
+
+
+            </div>
+
+            <div class="a_propos">
+                <h1>Assistance</h1><br>
+
+                <p> <a href="#">Centre d'aide</a></p>
+                <p> <a href="#">Nous contacter</a></p>
+
+
+            </div>
+        </div>
+
+    </footer>
 
 </body>
 
