Ajout du Doctype

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="fr">
+<!DOCTYPE html>
 
 <head>
     <title>Booki</title>
@@ -71,22 +72,22 @@
             </p>
         </div>
 
-        <div class="economique">
+        <div class="e">
             <img width="22px" height="16.26px" src="/images_booki/composants/vectoreconomique.png" alt="eco">
             <p> Economique </p>
         </div>
 
-        <div class="familial">
+        <div class="e">
             <img width="13.44px" height="22px" src="/images_booki/composants/vectorfamilial.png" alt="familial">
             <p> Familial </p>
         </div>
 
-        <div class="romantique">
+        <div class="e">
             <img width="22px" height="18.33px" src="/images_booki/composants/vectorromantique.png" alt="romantique">
             <p> Romantique </p>
         </div>
 
-        <div class="animaux_autorisés">
+        <div class="e">
             <img width="22px" height="22px" src="/images_booki/composants/vectoranimaux.png" alt="animaux">
             <p> Animaux autorisés </p>
         </div>
@@ -97,7 +98,7 @@
     <section class="information">
 
 
-        <img w idth="4px" height="10px" src="/images_booki/composants/vectori.png" alt="i">
+        <img width="4px" height="10px" src="/images_booki/composants/vectori.png" alt="i">
 
         <p> Plus de 500 logements sont disponibles dans cette ville </p>
 
@@ -109,7 +110,7 @@
         <section id="hébergement_marseilles">
 
             <h2> Hébergements à Marseilles </h2>
-            <div>test</div>
+
 
             <div class="six_rectangles">
                 <a href="#">
@@ -181,87 +182,96 @@
                     </div>
 
                     <a href="#">
+
+                        <div class="canebière">
+                            <div class="photo">
+                                <img width="246px" height="124px" alt="photo_2"
+                                    src="/images_booki/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                            </div>
+                            <span class="titre">Hôtel de la mer</span>
+                            <p> Nuit à partir de 46€ </p>
+                            <div class="star">
+                                <img width="12px" alt="b-first" height="12px"
+                                    src="/images_booki/composants/vectorstar.png">
+                                <img width="12px" alt="b-second" height="12px"
+                                    src="/images_booki/composants/vectorstar.png">
+                                <img width="12px" alt="b-third" height="12px"
+                                    src="/images_booki/composants/vectorstar.png">
+                                <img width="12px" alt="b-fourth" height="12px"
+                                    src="/images_booki/composants/vectorstar.png">
+                                <img width="12px" alt="b-fifth" height="12px"
+                                    src="/images_booki/composants/vectorwhitestar.png">
+
+                            </div>
+
+                        </div>
                     </a>
-                    <div class="canebière">
-                        <div class="photo">
-                            <img width="246px" height="124px" alt="photo_2"
-                                src="/images_booki/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
-                        </div>
-                        <span class="titre">Hôtel de la mer</span>
-                        <p> Nuit à partir de 46€ </p>
-                        <div class="star">
-                            <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
-                            <img width="12px" alt="b-second" height="12px"
-                                src="/images_booki/composants/vectorstar.png">
-                            <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
-                            <img width="12px" alt="b-fourth" height="12px"
-                                src="/images_booki/composants/vectorstar.png">
-                            <img width="12px" alt="b-fifth" height="12px"
-                                src="/images_booki/composants/vectorwhitestar.png">
+
+                    <a href="#">
+                        <div class="canebière">
+                            <div class="photo">
+                                <img width="246px" height="124px" alt="photo_2"
+                                    src="/images_booki/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
+                            </div>
+                            <span class="titre">Auberge Le Panier</span>
+                            <p> Nuit à partir de 23€ </p>
+                            <div class="star">
+                                <img width="12px" alt="b-first" height="12px"
+                                    src="/images_booki/composants/vectorstar.png">
+                                <img width="12px" alt="b-second" height="12px"
+                                    src="/images_booki/composants/vectorstar.png">
+                                <img width="12px" alt="b-third" height="12px"
+                                    src="/images_booki/composants/vectorstar.png">
+                                <img width="12px" alt="b-fourth" height="12px"
+                                    src="/images_booki/composants/vectorstar.png">
+                                <img width="12px" alt="b-fifth" height="12px"
+                                    src="/images_booki/composants/vectorwhitestar.png">
+
+                            </div>
 
                         </div>
+                    </a>
 
-                    </div>
-                </a>
+                    <a href="#">
+                        <div class="canebière">
+                            <div class="photo">
+                                <img width="246px" height="124px" alt="photo_2"
+                                    src="/images_booki/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
+                            </div>
+                            <span class="titre">Hôtel chez Amina</span>
+                            <p> Nuit à partir de 96€ </p>
+                            <div class="star">
+                                <img width="12px" alt="b-first" height="12px"
+                                    src="/images_booki/composants/vectorstar.png">
+                                <img width="12px" alt="b-second" height="12px"
+                                    src="/images_booki/composants/vectorstar.png">
+                                <img width="12px" alt="b-third" height="12px"
+                                    src="/images_booki/composants/vectorstar.png">
+                                <img width="12px" alt="b-fourth" height="12px"
+                                    src="/images_booki/composants/vectorstar.png">
+                                <img width="12px" alt="b-fifth" height="12px"
+                                    src="/images_booki/composants/vectorwhitestar.png">
 
-                <a href="#">
-                    <div class="canebière">
-                        <div class="photo">
-                            <img width="246px" height="124px" alt="photo_2"
-                                src="/images_booki/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
-                        </div>
-                        <span class="titre">Auberge Le Panier</span>
-                        <p> Nuit à partir de 23€ </p>
-                        <div class="star">
-                            <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
-                            <img width="12px" alt="b-second" height="12px"
-                                src="/images_booki/composants/vectorstar.png">
-                            <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
-                            <img width="12px" alt="b-fourth" height="12px"
-                                src="/images_booki/composants/vectorstar.png">
-                            <img width="12px" alt="b-fifth" height="12px"
-                                src="/images_booki/composants/vectorwhitestar.png">
-
-                        </div>
-
-                    </div>
-                </a>
-
-                <a href="#">
-                    <div class="canebière">
-                        <div class="photo">
-                            <img width="246px" height="124px" alt="photo_2"
-                                src="/images_booki/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
-                        </div>
-                        <span class="titre">Hôtel chez Amina</span>
-                        <p> Nuit à partir de 96€ </p>
-                        <div class="star">
-                            <img width="12px" alt="b-first" height="12px" src="/images_booki/composants/vectorstar.png">
-                            <img width="12px" alt="b-second" height="12px"
-                                src="/images_booki/composants/vectorstar.png">
-                            <img width="12px" alt="b-third" height="12px" src="/images_booki/composants/vectorstar.png">
-                            <img width="12px" alt="b-fourth" height="12px"
-                                src="/images_booki/composants/vectorstar.png">
-                            <img width="12px" alt="b-fifth" height="12px"
-                                src="/images_booki/composants/vectorwhitestar.png">
+                            </div>
 
                         </div>
-
-                    </div>
-                </a>
+                    </a>
 
             </div>
+            <h3>Afficher plus</h3>
+
         </section>
 
 
         <section id="populaires">
 
-
+            <div class="title22">
+                <h2> Les plus populaires </h2><br>
+                <img width="18px" alt="graph" height="15.75px" src="/images_booki/composants/vectorgraph.png">
+            </div>
 
             <div class="trois_rectangles">
-                <!-- <div class="title22">
-                    <h2> Les plus populaires </h2><br>
-                </div> -->
+
                 <div class="matin">
                     <div class="photo">
                         <img width="137px" height="144px" alt="photo_1"
@@ -270,7 +280,7 @@
                     <div class="text">
                         <span class="titre">Hôtel Le soleil du matin</span>
                         <p> Nuit à partir de 128€ </p>
-                        <div class="star">
+                        <div class="stars">
                             <img width="12px" alt="a-first" height="12px" src="/images_booki/composants/vectorstar.png">
                             <img width="12px" alt="a-second" height="12px"
                                 src="/images_booki/composants/vectorstar.png">
@@ -298,7 +308,7 @@
                     <div class="text">
                         <span class="titre">Hôtel Le soleil du matin</span>
                         <p> Nuit à partir de 128€ </p>
-                        <div class="star">
+                        <div class="stars">
                             <img width="12px" alt="a-first" height="12px" src="/images_booki/composants/vectorstar.png">
                             <img width="12px" alt="a-second" height="12px"
                                 src="/images_booki/composants/vectorstar.png">
@@ -323,7 +333,7 @@
                     <div class="text">
                         <span class="titre">Hôtel Le soleil du matin</span>
                         <p> Nuit à partir de 128€ </p>
-                        <div class="star">
+                        <div class="stars">
                             <img width="12px" alt="a-first" height="12px" src="/images_booki/composants/vectorstar.png">
                             <img width="12px" alt="a-second" height="12px"
                                 src="/images_booki/composants/vectorstar.png">
